# mini-diarium

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  PHILOSOPHY.md  README.md  latest-changelog.example.md  latest-changelog.md  package.json  uno.config.ts  wdio.conf.ts
.agents/skills/diagram-maintainer/: SKILL.md
.github/workflows/: ci.yml  release.yml  winget-publish.yml
docs/: BACKEND_ASSESSMENT_2026-03.md  CI_BEST_PRACTICES.md  KNOWN_ISSUES.md  OPEN_TASKS.md  PRODUCT_HUNT_LAUNCH.md  RELEASING.md  REQUIREMENTS.md  TODO.md  USER_GUIDE.md  text-input-extension-design.md
docs/archive/: TODO_ARCHIVE.md
docs/diagrams/: WORKFLOW.md  architecture-dark.d2  architecture.d2  save-entry-dark.mmd  save-entry.mmd  unlock-dark.mmd  unlock.mmd
docs/reviews/: 0.4.3-philosophy-alignment.md
docs/wip/: FLATPAK_SETUP.md
e2e/specs/: diary-workflow.spec.ts  multi-entry.spec.ts
flatpak/: com.minidiarium.metainfo.xml
scripts/: enrich-winget-manifest.mjs  enrich-winget-manifest.test.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  screen_lock.rs
src-tauri/src/commands/: entries.rs  export.rs  import.rs  navigation.rs  plugin.rs  stats.rs
src-tauri/src/commands/auth/: auth_core.rs  auth_methods.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/export/: json.rs  markdown.rs
src-tauri/src/import/: dayone.rs  dayone_txt.rs  jrnl.rs  minidiary.rs  mod.rs
src-tauri/src/plugin/: builtins.rs  mod.rs  registry.rs  rhai_loader.rs
src-tauri/test-fixtures/: README.md  jrnl-realistic.json
src/components/auth/: JournalPicker.tsx  PasswordCreation.tsx  (+3 more)
src/lib/: import.test.ts  tauri-params.test.ts  tauri.ts
src/state/: auth-session-boundary.test.ts  entries.ts  preferences.ts
src/styles/: critical-auth.css  editor.css
website/: index.html  llms.txt  sitemap.xml
website/blog/: feed.xml  index.html
website/posts-src/: 2026-03-25-journal-app-without-cloud.md
(+25 files in other folders)
