[package]
name = "mini-diarium"
version = "0.4.3"
description = "A modern, encrypted, local-first desktop journaling application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mini_diarium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
rand = "0.8"
hex = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
chrono = "0.4"
rhai = { version = "1", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_RemoteDesktop",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2", features = ["NSWorkspace"] }
objc2-foundation = { version = "0.2", features = [
  "NSDistributedNotificationCenter",
  "NSNotification",
  "NSOperation",
  "NSString",
  "block2",
] }
block2 = "0.5"
